[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Game Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SettingsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainMenuPanel.tscn" type="PackedScene" id=3]

[node name="Game Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Settings" parent="." index="0" instance=ExtResource( 2 )]

[node name="Main" parent="." index="1" instance=ExtResource( 3 )]

[connection signal="read_sound" from="." to="Settings" method="_on_Game_Menu_read_sound"]

[connection signal="back_button" from="Settings" to="." method="_on_Settings_back_button"]

[connection signal="sound_change" from="Settings" to="." method="_on_Settings_sound_change"]

[connection signal="play_pressed" from="Main" to="." method="_on_Main_play_pressed"]

[connection signal="settings_pressed" from="Main" to="." method="_on_Main_settings_pressed"]


